# QAbstractListModelExample

./: CMakeLists.txt  README.md  resources.qrc
qml/: ObjectDisplay.qml  main.qml
src/: Controller.cpp  Controller.h  MyObject.h  QObjectListModel.h  main.cpp
